--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,12 @@
   border-radius: 50%;
   color: white; }
 
+th.chapter-link {
+  width: 33%; }
+
+table.chapter-link {
+  width: 100%; }
+
 html, body {
   height: 100%;
   width: 100%;
