Added county support

--- a/app/main/views/map.html
+++ b/app/main/views/map.html
@@ -1,7 +1,7 @@
 <div id="dsa-map">
   <div class="map-container">
     <div id="map-fill">
-      <map-view options="dirOptions" chapters="chapters"></map-view>
+      <map-view></map-view>
     </div>
   </div>
 </div>
