Added congressional districts and ui-router resolve

--- a/app/modal/views/about.html
+++ b/app/modal/views/about.html
@@ -1,13 +1,16 @@
 <div class="modal-header">
-  <h3 class="modal-title" id="modal-title">About DSAtlas</h3>
+  <img src="/assets/img/dsatlas_logo.png" alt="DSAtlas"/>
+  <h5>v2.1.0</h5>
 </div>
-<div class="modal-body col-md-12" id="modal-body">
-  <div class="col-md-12">DSAtlas: An interactive map of <a href="http://dsausa.org/" target="_blank">Democratic Socialists of America</a> chapters.</div>
-  <div class="col-md-12">Creators:</div>
-  <div class="col-md-12"><a href="https://twitter.com/whimsical_turd"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;Chris Engelsma </div>
-  <div class="col-md-12"><a href="https://twitter.com/Ballard_HS_YDSA"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;Laura Couch</div>
-  <div class="col-md-offset-10 col-md-2 text-right"><h5>v2.0.0</h5></div>
+<div class="modal-body" id="modal-body">
+  <div>DSAtlas is an interactive map of <a href="http://dsausa.org/" target="_blank">Democratic Socialists of America</a> chapter membership across the United States. Hover and click on the map to discover more information about local chapters and membership.</div>
+  <hr />
+  <div class="text-center">Creators:
+    <a class="btn btn-social btn-twitter" href="https://twitter.com/whimsical_turd"><span class="fa fa-twitter"></span>Chris Engelsma</a>
+    <a class="btn btn-social btn-twitter" href="https://twitter.com/Ballard_HS_YDSA"><span class="fa fa-twitter"></span>Laura Couch</a>
+  </div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" type="button" ng-click="$modalCtrl.close()">Close</button>
+  <a class="btn btn-social-icon btn-github" type="button" href="https://github.com/chrisengelsma/dsatlas" target="_blank"><span class="fa fa-github-square"></span></a>
+  <a class="btn btn-primary" type="button" ng-click="$modalCtrl.close()">Close</a>
 </div>
