--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
-@import "map";
-@import "list";
-@import "popup";
-@import "modal";
+@import "map.scss";
+@import "list.scss";
+@import "popup.scss";
+@import "modal.scss";
 
 html, body {
   height: 100%;
