Added feedback form and removed configuration files

--- a/app/main/views/list.html
+++ b/app/main/views/list.html
@@ -10,25 +10,25 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="(key, value) in chapters track by $index" >
+      <tr ng-repeat="(key, value) in chapters track by $index">
         <th class="light-th">
           <table class="chapter-link">
             <tr>
-              <th class="chapter-link">
+              <td class="chapter-link">
                 <div ng-if="value.twitter"><a href="https://twitter.com/{{value.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a></div>
-              </th>
-              <th class="chapter-link">
+              </td>
+              <td class="chapter-link">
                 <div ng-if="value.facebook"><a href="https://facebook.com/{{value.facebook}}" target="_blank"><i class="fa fa-facebook"></i></a></div>
-              </th>
-              <th class="chapter-link">
+              </td>
+              <td class="chapter-link">
                 <div ng-if="value.website"><a href="{{value.website}}" target="_blank"><i class="fa fa-globe"></i></a></div>
-              </th>
+              </td>
             </tr>
           </table>
         </th>
-        <th class="light-th"> {{ value.name }} </th>
-        <th class="light-th"> {{ value.city }}, {{ value.state }} </th>
-        <th class="light-th"> {{ value.members > 0 ? value.members : ''}} </th>
+        <td class="clickable light-th" ng-click="goTo(value)"> {{ value.name }} </td>
+        <td class="clickable light-th" ng-click="goTo(value)"> {{ value.city }}, {{ value.state }} </td>
+        <td class="clickable light-th" ng-click="goTo(value)"> {{ value.members > 0 ? value.members : ''}} </td>
       </tr>
     </tbody>
   </table>
