--- a/app/shared/views/nav.html
+++ b/app/shared/views/nav.html
@@ -25,7 +25,8 @@
       </ul>
       <form class="navbar-form navbar-right">
         <div class="navbar-group">
-          <button type="button" class="btn btn-default" ng-click="openModal()"><i class="fa fa-info-circle" aria-hidden="true"></i></button>
+          <button type="button" class="btn btn-default" ng-click="openModal('email')"><i class="fa fa-envelope" aria-hidden="true"></i></button>
+          <button type="button" class="btn btn-default" ng-click="openModal('about')"><i class="fa fa-info-circle" aria-hidden="true"></i></button>
         </div>
       </form>
     </div><!-- /.navbar-collapse -->
