--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -66,6 +66,10 @@ th.chapter-link {
 table.chapter-link {
   width: 100%; }
 
+td.clickable {
+  text-align: left;
+  cursor: pointer; }
+
 .popup-container {
   font-size: large; }
   .popup-container .popup-body {
@@ -77,6 +81,7 @@ table.chapter-link {
       text-align: left; }
 
 .modal-dialog {
+  overflow-y: scroll;
   position: absolute;
   top: 50%;
   left: 50%;
