Added table sorting and filtering to list

--- a/app/modal/views/about.html
+++ b/app/modal/views/about.html
@@ -19,6 +19,10 @@
     <a class="btn btn-social btn-twitter" href="https://twitter.com/whimsical_turd"><span class="fa fa-twitter"></span>Chris Engelsma</a>
     <a class="btn btn-social btn-twitter" href="https://twitter.com/Ballard_HS_YDSA"><span class="fa fa-twitter"></span>Laura Couch</a>
   </div>
+  <hr/>
+  <div class="text-center">
+    Made with <i class="fa fa-heart color-red"></i> in Houston, TX.</div>
+  </div>
 </div>
 <div class="modal-footer">
   <a class="btn btn-social btn-github" type="button" href="https://github.com/chrisengelsma/dsatlas" target="_blank"><span class="fa fa-github-square"></span>Fork on GitHub</a>
