--- a/app/modal/views/email.html
+++ b/app/modal/views/email.html
@@ -16,7 +16,7 @@
       <textarea ng-model="$modalCtrl.content" class="form-control" rows="3" required></textarea>
     </div>
   </div>
-  <div style="width: 50%; margin: 0 auto; padding-bottom: 10px;" class="text-center">
+  <div class="captcha-helper text-center">
     <div vc-recaptcha key="'6Lf68UIUAAAAANgbCTXjhFjHKUDjpdBXhPN4yJat'"></div>
   </div>
   <div class="modal-footer">
