--- a/assets/scss/list.scss
+++ b/assets/scss/list.scss
@@ -1,4 +1,4 @@
-th.chapter-link {
+td.chapter-link {
   width: 33%;
 }
 
@@ -6,7 +6,8 @@ table.chapter-link {
   width: 100%;
 }
 
-td.clickable {
+.clickable {
   text-align: left;
   cursor: pointer;
 }
+
