--- a/app/main/views/list.html
+++ b/app/main/views/list.html
@@ -4,14 +4,43 @@
     <thead>
       <tr>
         <th> Links </th>
-        <th> Chapter </th>
-        <th> Location </th>
-        <th> Members </th>
+        <th class="clickable" ng-click="setSort('name')">
+          Chapter
+          <span ng-show="sortType=='name' && sortReverse === false" class="fa fa-caret-down"></span>
+          <span ng-show="sortType=='name' && sortReverse === true" class="fa fa-caret-up"></span>
+        </th>
+        <th class="clickable" ng-click="setSort('state')">
+          Location
+          <span ng-show="sortType=='state' && sortReverse === false" class="fa fa-caret-down"></span>
+          <span ng-show="sortType=='state' && sortReverse === true" class="fa fa-caret-up"></span>
+        </th>
+        <th class="clickable" ng-click="setSort('members')">
+          Members
+          <span ng-show="sortType=='members' && sortReverse === false" class="fa fa-caret-down"></span>
+          <span ng-show="sortType=='members' && sortReverse === true" class="fa fa-caret-up"></span>
+        </th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="(key, value) in chapters track by $index">
-        <th class="light-th">
+      <tr>
+        <td></td>
+        <td>
+          <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-search"></i></span>
+            <input type="text" class="form-control" ng-model="searchName">
+          </div>
+        </td>
+        <td>
+          <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-search"></i></span>
+            <input type="text" class="form-control" ng-model="searchLocation">
+          </div>
+        </td>
+        <td>
+        </td>
+      </tr>
+      <tr ng-repeat="value in chapters | orderBy:sortType:sortReverse | filter:{name: searchName, city: searchLocation}">
+        <td class="light-th">
           <table class="chapter-link">
             <tr>
               <td class="chapter-link">
@@ -25,7 +54,7 @@
               </td>
             </tr>
           </table>
-        </th>
+        </td>
         <td class="clickable light-th" ng-click="goTo(value)"> {{ value.name }} </td>
         <td class="clickable light-th" ng-click="goTo(value)"> {{ value.city }}, {{ value.state }} </td>
         <td class="clickable light-th" ng-click="goTo(value)"> {{ value.members > 0 ? value.members : ''}} </td>
