--- a/app/shared/views/nav.html
+++ b/app/shared/views/nav.html
@@ -13,13 +13,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li ng-class="{ active: isActive('/map') }"><a href="#" ui-sref="map">Map <span class="sr-only">(current)</span></a></li>
-        <li ng-class="{ active: isActive('/list') }"><a href="#" ui-sref="list">List </a></li>
+        <li ng-class="{ active: isActive('/map') }"><a href="#" ui-sref="map"><i class="fa fa-map"></i> Map <span class="sr-only">(current)</span></a></li>
+        <li ng-class="{ active: isActive('/list') }"><a href="#" ui-sref="list"><i class="fa fa-list"></i> List </a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Links
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-link"></i> Links
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="http://www.dsausa.org/">Join DSA</a></li>
+            <li><a href="http://www.dsausa.org/"><i class="fa fa-users"></i> Join DSA </a></li>
           </ul>
         </li>
       </ul>
