New space for admin login

--- a/src/app/site/info-modal/info-modal.component.html
+++ b/src/app/site/info-modal/info-modal.component.html
@@ -23,8 +23,7 @@
     <button type="button" class="btn btn-social btn-twitter" (click)="goTo('https://twitter.com/Ballard_HS_YDSA')"><span class="fa fa-twitter"></span>Laura Couch</button>
   </div>
   <hr/>
-  <div class="text-center">
-    Made with <i class="fa fa-heart color-red"></i> in Houston, TX.</div>
+  <div class="text-center"> Made with <i class="fa fa-heart color-red"></i> in Houston, TX. </div>
 </div>
 <div class="modal-footer">
   <button class="btn btn-social btn-github" type="button" (click)="goTo('https://github.com/chrisengelsma/dsatlas')"><span class="fa fa-github-square"></span>Fork on GitHub</button>
