--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@
 @import "~leaflet/dist/leaflet.css";
 @import "~leaflet.markercluster/dist/MarkerCluster.css";
 
-@import './app/list/list.component';
-@import './app/map/map.component';
-@import './app/nav/nav.component';
+@import './app/site/list/list.component';
+@import './app/site/map/map.component';
+@import './app/site/nav/nav.component';
 
 html,body {
   height: 100%;
