Additional steps for backoffice

--- a/src/app/admin/backoffice-chapter-detail/backoffice-chapter-detail.component.html
+++ b/src/app/admin/backoffice-chapter-detail/backoffice-chapter-detail.component.html
@@ -1,3 +1,6 @@
-<div>
-    {{ editing$.name | async }}
-</div>
+<table class="table">
+  <tr *ngFor="let key of objectkeys(editing)">
+    <td>{{ key }}</td>
+    <td>{{ editing[key] }}</td>
+  </tr>
+</table>
