--- a/src/app/admin/backoffice/backoffice.component.html
+++ b/src/app/admin/backoffice/backoffice.component.html
@@ -1,6 +1,6 @@
-<div class="left-panel">
-    <app-backoffice-chapter-list></app-backoffice-chapter-list>
-</div>
-<div class="right-panel">
-    <app-backoffice-chapter-detail></app-backoffice-chapter-detail>
-</div>
+  <div class="left-panel">
+    <app-backoffice-chapter-list style="width: 100%;"></app-backoffice-chapter-list>
+  </div>
+  <div class="right-panel">
+      <app-backoffice-chapter-detail></app-backoffice-chapter-detail>
+  </div>
