--- a/src/app/admin/backoffice/backoffice.component.html
+++ b/src/app/admin/backoffice/backoffice.component.html
@@ -1,6 +1,9 @@
+<app-backoffice-nav></app-backoffice-nav>
+<div class="under-fixed-navbar">
   <div class="left-panel">
     <app-backoffice-chapter-list style="width: 100%;"></app-backoffice-chapter-list>
   </div>
   <div class="right-panel">
       <app-backoffice-chapter-detail></app-backoffice-chapter-detail>
   </div>
+</div>
