--- a/src/app/admin/backoffice-chapter-list/backoffice-chapter-list.component.scss
+++ b/src/app/admin/backoffice-chapter-list/backoffice-chapter-list.component.scss
@@ -2,3 +2,11 @@
   display: flex;
   flex-direction: column;
 }
+
+td.clickable:hover {
+  cursor: pointer;
+}
+
+.list-bottom {
+  padding-top: 10px;
+}
