--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~bootstrap-social/bootstrap-social.css";
-@import "~font-awesome/css/font-awesome.min.css";
-@import "~leaflet/dist/leaflet.css";
-@import "~leaflet.markercluster/dist/MarkerCluster.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bootstrap-social/bootstrap-social.css';
+@import '~font-awesome/css/font-awesome.min.css';
+@import '~leaflet/dist/leaflet.css';
+@import '~leaflet.markercluster/dist/MarkerCluster.css';
+@import '~ngx-toastr/toastr';
 
 @import './app/site/list/list.component';
 @import './app/site/map/map.component';
