--- a/src/app/admin/backoffice-chapter-detail/backoffice-chapter-detail.component.html
+++ b/src/app/admin/backoffice-chapter-detail/backoffice-chapter-detail.component.html
@@ -7,7 +7,7 @@
       <div class="card-body">
         <form novalidate [formGroup]="chapterForm">
           <div class="form-group row">
-            <label for="name" class="col-sm-2 col-form-label col-form-label-sm">Name</label>
+            <label for="name" class="col-sm-2 col-form-label col-form-label-sm">Name:</label>
             <div class="col-sm-10">
               <input type="text"
                      id="name"
@@ -19,7 +19,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="members" class="col-sm-2 col-form-label col-form-label-sm">Members</label>
+            <label for="members" class="col-sm-2 col-form-label col-form-label-sm">Members:</label>
             <div class="col-sm-10">
               <input type="text"
                      id="members"
@@ -31,7 +31,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="city" class="col-sm-2 col-form-label col-form-label-sm">City</label>
+            <label for="city" class="col-sm-2 col-form-label col-form-label-sm">City:</label>
             <div class="col-sm-10">
               <input type="text"
                      id="city"
@@ -43,7 +43,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="state" class="col-sm-2 col-form-label col-form-label-sm">State</label>
+            <label for="state" class="col-sm-2 col-form-label col-form-label-sm">State:</label>
             <div class="col-sm-10">
               <select id="state"
                       class="form-control form-control-sm"
@@ -56,7 +56,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="lat" class="col-sm-2 col-form-label col-form-label-sm">Lat</label>
+            <label for="lat" class="col-sm-2 col-form-label col-form-label-sm">Lat:</label>
             <div class="col-sm-10">
               <input type="text"
                      id="lat"
@@ -68,7 +68,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="lon" class="col-sm-2 col-form-label col-form-label-sm">Lon</label>
+            <label for="lon" class="col-sm-2 col-form-label col-form-label-sm">Lon:</label>
             <div class="col-sm-10">
               <input type="text"
                      id="lon"
@@ -80,7 +80,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="twitter" class="col-sm-2 col-form-label col-form-label-sm">Twitter</label>
+            <label for="twitter" class="col-sm-2 col-form-label col-form-label-sm">Twitter:</label>
             <div class="col-sm-10">
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
@@ -97,7 +97,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="facebook" class="col-sm-2 col-form-label col-form-label-sm">Facebook</label>
+            <label for="facebook" class="col-sm-2 col-form-label col-form-label-sm">Facebook:</label>
             <div class="col-sm-10">
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
@@ -114,7 +114,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="website" class="col-sm-2 col-form-label col-form-label-sm">Website</label>
+            <label for="website" class="col-sm-2 col-form-label col-form-label-sm">Website:</label>
             <div class="col-sm-10">
               <input type="text"
                      id="website"
@@ -125,6 +125,29 @@
             </div>
           </div>
 
+          <div class="form-group row">
+            <label for="email" class="col-sm-2 col-form-label col-form-label-sm">Email:</label>
+            <div class="col-sm-10">
+              <input type="email"
+                     id="email"
+                     class="form-control form-control-sm"
+                     formControlName="email"
+                     [(ngModel)]="selected.email"
+                     value="{{ selected.email }}">
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="tel" class="col-sm-2 col-form-label col-form-label-sm">Tel:</label>
+            <div class="col-sm-10">
+              <input type="text"
+                     id="tel"
+                     class="form-control form-control-sm"
+                     formControlName="tel"
+                     [(ngModel)]="selected.tel"
+                     value="{{ selected.tel }}">
+            </div>
+          </div>
           <div class="form-group">
             <button type="button" class="btn btn-primary" (click)="save()"><i class="fa fa-save"></i> Save</button>
             <button type="button" class="btn btn-danger" (click)="delete()"><i class="fa fa-trash"></i> Delete</button>
