Finished changes to backoffice tel and email

--- a/src/app/site/list/list.component.html
+++ b/src/app/site/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center under-fixed-navbar" >
+<div id="front-list" class="container text-center under-fixed-navbar under-fixed-navbar-scroll">
   <div class="alert alert-warning">Note: This list is not exhaustive as numbers are self-reported and constantly being updated.</div>
   <table class="table table-sm table-hover">
     <thead>
