--- a/src/app/site/list/list.component.scss
+++ b/src/app/site/list/list.component.scss
@@ -1,5 +1,9 @@
 @import '../../globals.scss';
 
+.under-fixed-navbar-scroll.under-fixed-navbar {
+  overflow: auto;
+}
+
 td.chapter-link {
   width: 33%;
   border-top: none !important;
